syntax = "proto3";

package core.v1;

option go_package = "github.com/getsynq/cloud/api/core/v1";

// Type of Entity.
// This enum lists all the types currently supported by Synq.
enum EntityType {
  ENTITY_TYPE_UNSPECIFIED = 0;
  ENTITY_TYPE_FOLDER = 1;

  // BIGQUERY 1XX

  ENTITY_TYPE_BQ_PROJECT = 101;
  ENTITY_TYPE_BQ_DATASET = 102;
  ENTITY_TYPE_BQ_TABLE = 103;
  ENTITY_TYPE_BQ_VIEW = 105;

  // LOOKER 2XX

  ENTITY_TYPE_LOOKER_LOOK = 201;
  ENTITY_TYPE_LOOKER_EXPLORE = 203;
  ENTITY_TYPE_LOOKER_VIEW = 207;
  ENTITY_TYPE_LOOKER_DASHBOARD = 208;

  // DBT 3XX

  ENTITY_TYPE_DBT_MODEL = 301;
  ENTITY_TYPE_DBT_TEST = 302;
  ENTITY_TYPE_DBT_SOURCE = 303;
  ENTITY_TYPE_DBT_MACRO = 304;
  ENTITY_TYPE_DBT_PROJECT = 306;
  ENTITY_TYPE_DBT_METRIC = 307;
  ENTITY_TYPE_DBT_SNAPSHOT = 310;
  ENTITY_TYPE_DBT_SEED = 311;
  ENTITY_TYPE_DBT_ANALYSIS = 312;
  ENTITY_TYPE_DBT_EXPOSURE = 313;
  ENTITY_TYPE_DBT_GROUP = 314;

  // DBT 35X

  ENTITY_TYPE_DBT_CLOUD_ACCOUNT = 351;
  ENTITY_TYPE_DBT_CLOUD_PROJECT = 352;
  ENTITY_TYPE_DBT_CLOUD_JOB = 353;
  ENTITY_TYPE_DBT_CLOUD_JOB_STEP = 354;

  // SNOWFLAKE 5XX

  ENTITY_TYPE_SNOWFLAKE_PROJECT = 501;
  ENTITY_TYPE_SNOWFLAKE_DATASET = 502;
  ENTITY_TYPE_SNOWFLAKE_TABLE = 503;
  ENTITY_TYPE_SNOWFLAKE_ACCOUNT = 505;
  ENTITY_TYPE_SNOWFLAKE_DATABASE = 506;
  ENTITY_TYPE_SNOWFLAKE_SCHEMA = 507;
  ENTITY_TYPE_SNOWFLAKE_VIEW = 508;

  // REDSHIFT 8XX

  ENTITY_TYPE_REDSHIFT_DATABASE = 801;
  ENTITY_TYPE_REDSHIFT_SCHEMA = 802;
  ENTITY_TYPE_REDSHIFT_TABLE = 803;
  ENTITY_TYPE_REDSHIFT_VIEW = 805;

  // TABLEAU 11xx
  
  ENTITY_TYPE_TABLEAU_EMBEDDED = 1101;
  ENTITY_TYPE_TABLEAU_PUBLISHED = 1102;
  ENTITY_TYPE_TABLEAU_CUSTOM_SQL = 1103;
  ENTITY_TYPE_TABLEAU_TABLE = 1104;
  ENTITY_TYPE_TABLEAU_SHEET = 1105;
  ENTITY_TYPE_TABLEAU_DASHBOARD = 1106;

  // AIRFLOW 12xx

  ENTITY_TYPE_AIRFLOW_DAG = 1201;
  ENTITY_TYPE_AIRFLOW_TASK = 1202;

  // CLICKHOUSE 13XX

  ENTITY_TYPE_CLICKHOUSE_DATABASE = 1301;
  ENTITY_TYPE_CLICKHOUSE_SCHEMA = 1302;
  ENTITY_TYPE_CLICKHOUSE_TABLE = 1303;
  ENTITY_TYPE_CLICKHOUSE_VIEW = 1305;

  ENTITY_TYPE_ANOMALY_INTEGRATION = 1401;
  ENTITY_TYPE_ANOMALY_MONITOR = 1403;
  ENTITY_TYPE_ANOMALY_MONITOR_SEGMENT = 1404;

  // POSTGRES 16XX

  ENTITY_TYPE_POSTGRES_DATABASE = 1601;
  ENTITY_TYPE_POSTGRES_SCHEMA = 1602;
  ENTITY_TYPE_POSTGRES_TABLE = 1603;
  ENTITY_TYPE_POSTGRES_VIEW = 1605;

  // MYSQL 17XX

  ENTITY_TYPE_MYSQL_DATABASE = 1701;
  ENTITY_TYPE_MYSQL_SCHEMA = 1702;
  ENTITY_TYPE_MYSQL_TABLE = 1703;
  ENTITY_TYPE_MYSQL_VIEW = 1705;
}
